# Spatial-Factorization

./: .gitignore  ANALYSIS.md  BENCHMARK.md  BENCHMARK_SCALE.md  CLAUDE.md  COLON.md  DOCS.md  GENES.md  KNN.md  PLAN.md  POSTERIOR.md  POSTERIOR_ANALYSIS.md  README.md  SDMBENCH.md  SLIDESEQ_PNMF_PLANNING.md  SLIDESEQ_SVGP_PLANNING.md  VIDEO.md  multiplex_commands.md  outputs  pyproject.toml  setup.py
configs/colon/: general.yaml  general_test.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  pnmf.yaml  svgp.yaml
configs/liver/: run_status.json
configs/liver/diseased/: general.yaml  general_test.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  pnmf.yaml  svgp.yaml
configs/liver/healthy/: general.yaml  general_test.yaml  lcgp.yaml  mggp_lcgp.yaml  (+3 more)
configs/merfish/: general.yaml  general_test.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  pnmf.yaml  svgp.yaml
configs/osmfish/: general.yaml  general_test.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  pnmf.yaml  svgp.yaml
configs/sdmbench/: run_status.json
configs/slideseq/: general.yaml  general_test.yaml  lcgp.yaml  lcgp_test.yaml  mggp_lcgp.yaml  mggp_lcgp_test.yaml  mggp_svgp.yaml  pnmf.yaml  run_status.json  svgp.yaml  svgp_no_groups_test.yaml  svgp_test.yaml
configs/tenxvisium/: general.yaml  general_test.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  pnmf.yaml  svgp.yaml
configs/test/: MGGP_SVGP.yaml  SVGP.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  pnmf.yaml  svgp.yaml
data/toy/: generate.py  plot_factors.py
docs/: advanced.rst  cli.rst  conf.py  configuration.rst  datasets.rst  index.rst  installation.rst  math.rst  models.rst  multiplex.rst  outputs.rst  pipeline.rst  quickstart.rst  requirements.txt
docs/examples/: colon.rst  merfish.rst  sdmbench.rst  slideseq.rst
paper/panel_2/: knn_strategies.py  plot_density.py  plot_gaussian_density.py  plot_knn.py  plot_knn_robustness.py  plot_mggp_density.py  plot_samples.py
scripts/: benchmark_scale.py  clean_test_outputs.sh  colon_ingest.py  colon_ingest_patient2.py  install_deps.sh  plot_benchmark_scale.py  plot_colon_patients.py  plot_colon_pelka.py  setup_env.sh
spatial_factorization/: __init__.py  __main__.py  cli.py  config.py  generate.py  runner.py  status.py
spatial_factorization/commands/: __init__.py  analyze.py  benchmark_analyze.py  benchmark_figures.py  figures.py  multianalyze.py  preprocess.py  train.py
spatial_factorization/datasets/: __init__.py  base.py  colon.py  liver.py  merfish.py  osmfish.py  sdmbench.py  slideseq.py  tenxvisium.py
tests/: test_analyze.py  test_generate.py  test_preprocessed.py  test_runner.py  test_svgp_model.py  test_train.py
(+121 files in other folders)
