[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-factorization"
version = "0.1.0"
description = "Spatial transcriptomics analysis using probabilistic non-negative matrix factorization with Gaussian process priors"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Luis Chumpitaz Diaz", email = "luis.chumpitazdiaz@gladstone.ucsf.edu"}
]
keywords = [
    "spatial-transcriptomics",
    "non-negative-matrix-factorization",
    "gaussian-processes",
    "variational-inference",
    "single-cell",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "click>=8.0",
    # Bioinformatics
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    # Note: gpzoo and pnmf installed separately or from git
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
datasets = [
    "squidpy>=1.2.0",  # For slideseq, visium datasets
]
tensorboard = [
    "tensorboard>=2.10.0",
]
all = [
    "spatial-factorization[dev,notebooks,datasets,tensorboard]",
]

[project.urls]
Homepage = "https://github.com/luisdiaz1997/Spatial-Factorization"
Repository = "https://github.com/luisdiaz1997/Spatial-Factorization"
Issues = "https://github.com/luisdiaz1997/Spatial-Factorization/issues"

[project.scripts]
spatial_factorization = "spatial_factorization.cli:cli"

[tool.setuptools.packages.find]
# Package is at root level: spatial_factorization/

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
